name:                hs-istatd-client

version:             1.0.0.0
license:             AllRightsReserved
license-file:        LICENSE
author:              Imran Hameed
maintainer:          ihameed@imvu.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10


library
  exposed-modules:
    Imvu.Network.IstatdClient
    Imvu.Network.IstatdClient.Types

  build-depends:
      base >=4.6
    , bytestring
    , deepseq
    , double-conversion
    , hashable
    , network
    , semigroups
    , split
    , transformers
    , double-conversion

  default-language:    Haskell2010

  ghc-options: -Wall
  ghc-options: -Werror
  ghc-options: -fwarn-tabs -fwarn-incomplete-uni-patterns
  ghc-options: -O2

test-suite alltests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests .
  main-is: alltests.hs

  default-language:    Haskell2010

  ghc-options: -Wall
  ghc-options: -Werror
  ghc-options: -rtsopts -fwarn-tabs -fwarn-incomplete-uni-patterns
  ghc-options: -O2
  ghc-options: -threaded

  other-modules:
    ProtocolEncodeTest

  build-depends:
      base >=4.6
    , bytestring
    , deepseq
    , hashable
    , network
    , network-bsd
    , semigroups
    , split
    , transformers
    , tasty
    , tasty-hunit
    , tasty-th
    , double-conversion
